@@ -146,7 +146,16 @@ class AG_Voronoi_vertex_2
 {
   friend class Apollonius_graph_Voronoi_traits_2<DG>;
   friend class AG_Voronoi_edge_2<DG>;
+#ifndef CGAL_CFG_NESTED_CLASS_FRIEND_DECLARATION_BUG
   friend class AG_Voronoi_edge_2<DG>::Base;
+#else
+  friend class
+  CGAL_VORONOI_DIAGRAM_2_NS::Voronoi_edge_base_2<DG,
+						 typename DG::Point_2,
+						 typename DG::Site_2,
+						 AG_Voronoi_edge_2<DG>,
+						 AG_Voronoi_vertex_2<DG> >;
+#endif
 
  private:
   typedef CGAL_VORONOI_DIAGRAM_2_NS::Voronoi_vertex_base_2
