@@ -142,7 +142,17 @@ class DT_Voronoi_vertex_2
 {
   friend class Delaunay_triangulation_Voronoi_traits_2<DG>;
   friend class DT_Voronoi_edge_2<DG>;
+#ifndef CGAL_CFG_NESTED_CLASS_FRIEND_DECLARATION_BUG
   friend class DT_Voronoi_edge_2<DG>::Base;
+#else
+  friend class
+  CGAL_VORONOI_DIAGRAM_2_NS::Voronoi_edge_base_2
+  <DG,
+   typename DG::Geom_traits::Point_2,
+   typename DG::Geom_traits::Point_2,
+   DT_Voronoi_edge_2<DG>,
+   DT_Voronoi_vertex_2<DG> >;
+#endif
 
  private:
   typedef typename DG::Geom_traits::Point_2  Point_2;
