@@ -289,7 +289,17 @@ class SVD_Voronoi_vertex_2
 {
   friend class Segment_Voronoi_diagram_Voronoi_traits_2<DG>;
   friend class SVD_Voronoi_edge_2<DG>;
+#ifndef CGAL_CFG_NESTED_CLASS_FRIEND_DECLARATION_BUG
   friend class SVD_Voronoi_edge_2<DG>::Base;
+#else
+  friend class
+  CGAL_VORONOI_DIAGRAM_2_NS::Voronoi_edge_base_2<DG,
+						 typename DG::Point_2,
+						 typename DG::Site_2,
+						 SVD_Voronoi_edge_2<DG>,
+						 SVD_Voronoi_vertex_2<DG>,
+						 Tag_true>;
+#endif
 
  private:
   typedef CGAL_VORONOI_DIAGRAM_2_NS::Voronoi_vertex_base_2
