@@ -18,7 +18,16 @@ class VTC_Voronoi_vertex_2
 {
   friend class Voronoi_traits_concept_2<DG>;
   friend class VTC_Voronoi_edge_2<DG>;
+#ifndef CGAL_CFG_NESTED_CLASS_FRIEND_DECLARATION_BUG
   friend class VTC_Voronoi_edge_2<DG>::Base;
+#else
+  friend class
+  CGAL_VORONOI_DIAGRAM_2_NS::Voronoi_edge_base_2<DG,
+						 typename DG::Point_2,
+						 typename DG::Site_2,
+						 VTC_Voronoi_edge_2<DG>,
+						 VTC_Voronoi_vertex_2<DG> >;
+#endif
 
  private:
   typedef CGAL_VORONOI_DIAGRAM_2_NS::Voronoi_vertex_base_2
